--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,9 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# Ignore logs directory
+*.logs
+
+# Tye ignore temp directory
+*.tye
