--- a/microservices/tye.yaml
+++ b/microservices/tye.yaml
@@ -7,6 +7,8 @@
 name: microservices
 extensions:
 - name: zipkin
+- name: seq
+  logPath: ./.logs
 services:
 - name: backend
   project: backend/backend.csproj
