--- a/microservices/tye.yaml
+++ b/microservices/tye.yaml
@@ -1,9 +1,3 @@
-# tye application configuration file
-# read all about it at https://github.com/dotnet/tye
-#
-# when you've given us a try, we'd love to know what you think:
-#    https://aka.ms/AA7q20u
-#
 name: microservices
 extensions:
 - name: zipkin
@@ -30,7 +24,7 @@ services:
   - name: ASPNETCORE_ENVIRONMENT
     value: Development
   - name: BackendAPIUrlHC
-    value: https://localhost:5000/hc
+    value: http://localhost:9000/hc
   bindings:
   - protocol: https
     name: https-port-frontend-binding
@@ -46,11 +40,11 @@ services:
   - name: HealthChecksUI__HealthChecks__0__Name
     value: Frontend Service Health Check
   - name: HealthChecksUI__HealthChecks__0__Uri
-    value: https://localhost:5001/hc
+    value: http://localhost:9001/hc
   - name: HealthChecksUI__HealthChecks__1__Name
     value: Backend Service Health Check
   - name: HealthChecksUI__HealthChecks__1__Uri
-    value: https://localhost:5000/hc
+    value: http://localhost:9000/hc
   bindings:
   - protocol: https
     name: https-port-webstatus-binding
