Included opentelemetry with featuremanagement

--- a/microservices/backend/appsettings.Development.json
+++ b/microservices/backend/appsettings.Development.json
@@ -8,5 +8,10 @@
         "System": "Warning"
       }
     }
+  },
+  "UseExporter": "console",
+  "Zipkin": {
+    "ServiceName": "backend",
+    "Endpoint": "http://localhost:9411/api/v2/spans"
   }
 }
