--- a/microservices/frontend/appsettings.json
+++ b/microservices/frontend/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "UseExporter": "console",
+  "Zipkin": {
+    "ServiceName": "frontend",
+    "Endpoint": "http://localhost:9411/api/v2/spans"
+  },
+  "BackendAPIUrlHC": "http://localhost:9000/hc"
 }
