--- a/microservices/backend/appsettings.Development.json
+++ b/microservices/backend/appsettings.Development.json
@@ -13,5 +13,10 @@
   "Zipkin": {
     "ServiceName": "backend",
     "Endpoint": "http://localhost:9411/api/v2/spans"
+  },
+  "UseFeatureManagement": true,
+  "FeatureManagement": {
+    "StaticWeatherAPI": false,
+    "ExternalWeatherAPI": true
   }
 }
