--- a/microservices/tye.yaml
+++ b/microservices/tye.yaml
@@ -1,6 +1,5 @@
 name: microservices
 extensions:
-- name: zipkin
 - name: seq
   logPath: ./.logs
 services:
@@ -8,73 +7,39 @@ services:
   project: backend/backend.csproj
   env:
   - name: ASPNETCORE_ENVIRONMENT
-    value: Development
-  - name: RedisConnectionString
-    value: localhost:6379
+    value: Development  
   - name: UseFeatureManagement
     value: True
   - name: FeatureManagement__StaticWeatherAPI
-    value: False
-  - name: FeatureManagement__ExternalWeatherAPI
     value: True
+  - name: FeatureManagement__ExternalWeatherAPI
+    value: False
+  - name: AzureMapSubscriptionKey
+    value: <Azure-Map-Subscription-Key>
   - name: UseExporter
     value: "zipkin"
   - name: Zipkin__ServiceName
-    value: "backend"
-  - name: Zipkin__Endpoint
-    value: "http://localhost:9411/api/v2/spans"  
-  bindings:  
-  - protocol: https
-    name: https-port-backend-binding
-    port: 5000
-  - protocol: http
-    name: http-port-backend-binding
-    port: 9000
+    value: "backend"  
 - name: frontend
   project: frontend/frontend.csproj
-  env:
+  env: 
   - name: ASPNETCORE_ENVIRONMENT
-    value: Development
-  - name: BackendAPIUrlHC
-    value: http://localhost:9000/hc
+    value: Development  
   - name: UseExporter
     value: "zipkin"
   - name: Zipkin__ServiceName
     value: "frontend"
-  - name: Zipkin__Endpoint
-    value: "http://localhost:9411/api/v2/spans"
-  bindings:
-  - protocol: https
-    name: https-port-frontend-binding
-    port: 5001
-  - protocol: http
-    name: http-port-frontend-binding
-    port: 9001
 - name: webstatus
   project: webstatus/webstatus.csproj
   env:
   - name: ASPNETCORE_ENVIRONMENT
     value: Development
-  - name: HealthChecksUI__HealthChecks__0__Name
-    value: Frontend Service Health Check
-  - name: HealthChecksUI__HealthChecks__0__Uri
-    value: http://localhost:9001/hc
-  - name: HealthChecksUI__HealthChecks__1__Name
-    value: Backend Service Health Check
-  - name: HealthChecksUI__HealthChecks__1__Uri
-    value: http://localhost:9000/hc
+- name: zipkin
+  image: openzipkin/zipkin
   bindings:
-  - protocol: https
-    name: https-port-webstatus-binding
-    port: 5007
-  - protocol: http
-    name: http-port-webstatus-binding
-    port: 9007
+  - port: 9411
 - name: redis
   image: redis
   bindings:
   - port: 6379
     connectionString: "${host}:${port}"
-- name: redis-cli
-  image: redis
-  args: "redis-cli -h redis MONITOR"
